    - &test_command_line()
    - &split() now takes optional 2nd param to specify token
    - &find(regexp, directory list)
    - &rm_name() -- close to, but slightly different than &env_name()
    - &prime(min,max) - return prime numbers between min and max
    - &env_max_hosts()
    - &get_<compiler>_version() funclets now take optional parameter
      specifying the argv[0] to use.

- See https://svn.open-mpi.org/trac/mtt/changeset/863:
  - re-wrote funclet parser; MUST edit INI file and remove excess
    quoting
  - new MPI details fields: launcher, parameters, network,
    resource_manager
  - Can escape &, ', " in INI files

- --section: beware of section names with spaces!  s/ /./g in --section
    arguments if you have spaces in your section names.

- --clean-start: remove MTT sources, installations, and metadata out of
    the scratch directory before running

- --print-cmd-time: Display the amount of time taken in each command
- --print-phases-time: Display the amount of time taken in each phase
- --print-time|-p: Alias for --print-phases-time --print-cmd-time

- @variable@ expansion *everywhere* in ini files (not just in "exec")

- MTT lock server.

- SVN module - choose between "export" and "checkout"
  (defaults to "export"):
  - svn_export = 1 (specify the use of "svn export")
  - svn_checkout = 1 (specify the use of "svn checkout")
  - svn_command (e.g., "svk" or "rsh some-node svn")

- terminate_files field in MTT section.  Defaults to $HOME/mtt-stop
  and &scratch_root()/mtt-stop.

- Added support for MPICH2 (and therefore MVAPICH2) and LAM/MPI

- Added support for the ClusterTools package installer

- Renamed the MPI install phase field names:
  compiler_name -> ompi_compiler_name (etc.)
  Need to check for backward compatibility

- Fix the mpi_details logic. We now follow 5 specific steps to look for 
  the Right MPI Details section to use: 

  1. Look for an mpi_details field in the current MPI Install phase