@@ -548,17 +548,22 @@ EOT
 # Test Run phase
 #======================================================================
 
-[Test run: ibm]
-test_build = ibm
+# Some default Test run parameters to include in (most) Test run sections
+[Test run]
 pass = &and(&cmd_wifexited(), &eq(&cmd_wexitstatus(), 0))
-skipped = &and(&cmd_wifexited(), &eq(&cmd_wexitstatus(), 77))
 timeout = &max(30, &multiply(10, &test_np()))
 save_stdout_on_pass = 1
 merge_stdout_stderr = 1
 stdout_save_lines = 100
 np = &env_max_procs()
-
 specify_module = Simple
+
+[Test run: ibm]
+include_section = Test run
+test_build = ibm
+
+skipped = &and(&cmd_wifexited(), &eq(&cmd_wexitstatus(), 77))
+
 # Similar rationale to the intel test run section
 simple_first:tests = &find_executables("collective", "communicator", \
                                        "datatype", "dynamic", "environment", \
@@ -574,94 +579,81 @@ simple_fail:np = &env_max_procs()
 #----------------------------------------------------------------------
 
 [Test run: onesided]
+include_section = Test run
 test_build = onesided
-pass = &and(&cmd_wifexited(), &eq(&cmd_wexitstatus(), 0))
-timeout = &max(30, &multiply(10, &test_np()))
-save_stdout_on_pass = 1
-merge_stdout_stderr = 1
-stdout_save_lines = 100
+
 np = &if(&gt(&env_max_procs(), 0), &step(2, &max(2, &env_max_procs()), 2), 2)
 
-specify_module = Simple
 simple_pass:tests = &cat("run_list")
-specify_module = Simple
 
 #----------------------------------------------------------------------
 
 [Test run: mpicxx]
+include_section = Test run
 test_build = mpicxx
-pass = &and(&cmd_wifexited(), &eq(&cmd_wexitstatus(), 0))
-timeout = &max(30, &multiply(10, &test_np()))
-save_stdout_on_pass = 1
-merge_stdout_stderr = 1
-argv = &if(&eq(&mpi_get_name(), "ompi-nightly-v1.1"), "-nothrow", "")
-np = &env_max_procs()
 
-specify_module = Simple
+argv = &if(&eq(&mpi_get_name(), "ompi-nightly-v1.1"), "-nothrow", "")
+
 simple_pass:tests = src/mpi2c++_test src/mpi2c++_dynamics_test
 
 #----------------------------------------------------------------------
      
 [Test run: imb correctness]
+include_section = Test run
 test_build = imb
-pass = &and(&cmd_wifexited(), &eq(&cmd_wexitstatus(), 0))
+
 timeout = &max(1800, &multiply(50, &test_np()))
-save_stdout_on_pass = 1
 merge_stdout_stderr = 1
 stdout_save_lines = 100
-np = &env_max_procs()
 
-specify_module = Simple
 simple_only:tests = src/IMB-MPI1
 
 #----------------------------------------------------------------------
 
 [Test run: imb performance]
+include_section = Test run
 test_build = imb
+
 pass = &eq(&cmd_wexitstatus(), 0)
 timeout = -1
-save_stdout_on_pass = 1
 # Ensure to leave this value as "-1", or performance results could be lost!
 stdout_save_lines = -1
 merge_stdout_stderr = 1
 
 argv = -npmin &test_np() &enumerate("PingPong", "PingPing", "Sendrecv", "Exchange", "Allreduce", "Reduce", "Reduce_scatter", "Allgather", "Allgatherv", "Alltoall", "Bcast", "Barrier") 
 
-specify_module = Simple
 analyze_module = IMB
 simple_pass:tests = src/IMB-MPI1
 
 #----------------------------------------------------------------------
 
 [Test run: netpipe]
+include_section = Test run
 test_build = netpipe
+
 pass = &eq(&cmd_wexitstatus(), 0)
 timeout = -1
-save_stdout_on_pass = 1
 # Ensure to leave this value as "-1", or performance results could be lost!
 stdout_save_lines = -1
 merge_stdout_stderr = 1
 # NetPIPE is ping-pong only, so we only need 2 procs
 np = 2
 
-specify_module = Simple
 analyze_module = NetPipe
 simple_pass:tests = NPmpi
 
 #----------------------------------------------------------------------
 
-#----------------------------------------------------------------------
-
 [Test run: nbcbench]
+include_section = Test run
 test_build = nbcbench
+
 pass = &and(&test_wifexited(), &eq(&test_wexitstatus(), 0))
 timeout = -1
-save_stdout_on_pass = 1
 # Ensure to leave this value as "-1", or performance results could be lost!
 stdout_save_lines = -1
 merge_stdout_stderr = 1
 
-specify_module = Simple
 analyze_module = NBCBench
 simple_pass:tests = nbcbench
 
@@ -709,3 +701,28 @@ textfile_detail_header =
 textfile_detail_footer =
 
 textfile_textwrap = 78
+
+[Reporter: send email]
+module = Email
+email_to = fill this in
+email_subject = MPI test results: @phase@ / @section@
+
+# The IRC module can send to a single user, a channel,
+# or both
+[Reporter: irc]
+module = IRC
+
+# Name of IRC bot
+irc_bot_name = mtt-bot
+# mtt-bot will message this nickname
+irc_nick =
+# mtt-bot will message this channel
+irc_channel =
+
+# See www.irchelp.org for lists of freely available IRC servers
+irc_server_name = irc.freenode.net
+irc_server_port = 6667
+
+# Send the below message
+# (Note: empty messages will not be sent!)
+irc_message = &if(&regexp(&current_section(), "test build"), "[&shell(\"date\")] MTT completed testing section [&current_section()] on &hostname()", "")
